<resources>
    <string name="app_name">Semester Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="assessments">Assessments</string>
    <string name="title_activity_term_detail">TermDetail</string>
    <string name="title_activity_course_detail">CourseDetail</string>
    <string name="title_activity_assessment_detail">AssessmentDetail</string>
    <string name="term_active_checkbox">Active</string>

    <string-array name="course_statuses">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>

    <string-array name="assessment_types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_note_detail">NoteDetail</string>
    <string name="notes">Notes</string>
    <string name="term_details">Term Details</string>
    <string name="no_courses">No Courses</string>
    <string name="term_end_date">Term End Date</string>
    <string name="term_start_date">Term Start Date</string>
    <string name="term_name">Term Name</string>
    <string name="course_list">Course List</string>
    <string name="notes_detail">Note Details</string>
    <string name="note_name">Note Name</string>
    <string name="course_icon">course_icon</string>
    <string name="body">Body</string>
    <string name="course_details">Course Details</string>
    <string name="course_name">Course Name</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_end_date">Course End Date</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="status">Status</string>
    <string name="select_term">Select Term</string>
    <string name="do_you_want_alerts_for_this_course">Do you want alerts for this course?</string>
    <string name="mentor_details">Mentor Details</string>
    <string name="assessment_list">Assessment List</string>
    <string name="no_assessments">No Assessments</string>
    <string name="term_icon">term icon</string>
    <string name="status_icon">Status icon</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_type_icon">Assessment type icon</string>
    <string name="due_date">Due Date</string>
    <string name="select_course">Select Course</string>
    <string name="course_icon_2">course icon</string>
    <string name="do_you_want_alerts_for_this_assessment">Do you want alerts for this assessment?</string>
    <string name="note_list">Note List</string>
    <string name="no_notes">No Notes</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="channel_name">notification_channel_for_semester_tracker</string>
    <string name="channel_id">com.wgu.zbentz2.semestertracker.notification_channel</string>
    <string name="channel_description">handles_notifications_for_semester_tracker</string>
    <string name="no_terms_found">No Terms Found</string>
    <string name="no_notes_found">No Notes Found</string>
    <string name="no_courses_found">No Courses Found</string>
    <string name="no_assessments_found">No Assessments Found</string>
    <string name="no_terms">No Terms</string>
</resources>
