<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_assessment_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_assessment"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:inputType="textPersonName|textCapWords"
            android:paddingStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_name_label" />

        <Spinner
            android:id="@+id/edit_assessment_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:entries="@array/assessment_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_assessment_type_icon"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_type_label" />

        <EditText
            android:id="@+id/edit_assessment_due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:editable="false"
            android:focusable="false"
            android:paddingStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_due_date_label" />

        <Spinner
            android:id="@+id/edit_assessment_course_dropdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_assessment_course_icon"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_course_dropdown_label" />

        <CheckBox
            android:id="@+id/edit_assessment_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/edit_assessment_notifications_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_assessment_notifications_text" />

        <ListView
            android:id="@+id/edit_assessment_notes_list"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_notes_header_divider" />

        <TextView
            android:id="@+id/edit_assessment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_details"
            android:textColor="@color/textColorPrimary"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/edit_assessment_header_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_header" />

        <TextView
            android:id="@+id/edit_assessment_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assessment_name"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_header_divider" />

        <TextView
            android:id="@+id/edit_assessment_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/assessment_type"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_due_date" />

        <ImageView
            android:id="@+id/edit_assessment_type_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/assessment_type_icon"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/edit_assessment_type"
            app:layout_constraintStart_toStartOf="@+id/edit_assessment_type_label"
            app:layout_constraintTop_toTopOf="@+id/edit_assessment_type"
            app:srcCompat="@drawable/ic_assessment_type" />

        <View
            android:id="@+id/edit_assessment_type_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_type" />

        <TextView
            android:id="@+id/edit_assessment_due_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/due_date"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_name" />

        <TextView
            android:id="@+id/edit_assessment_course_dropdown_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_course"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_type_divider" />

        <ImageView
            android:id="@+id/edit_assessment_course_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/course_icon_2"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/edit_assessment_course_dropdown"
            app:layout_constraintStart_toStartOf="@+id/edit_assessment_course_dropdown_label"
            app:layout_constraintTop_toTopOf="@+id/edit_assessment_course_dropdown"
            app:srcCompat="@drawable/ic_course" />

        <View
            android:id="@+id/edit_assessment_select_course_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_course_dropdown" />

        <TextView
            android:id="@+id/edit_assessment_notifications_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/do_you_want_alerts_for_this_assessment"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_select_course_divider" />

        <TextView
            android:id="@+id/edit_assessment_notes_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/note_list"
            android:textColor="@color/textColorPrimary"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_notifications_text" />

        <View
            android:id="@+id/edit_assessment_notes_header_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_notes_header" />

        <TextView
            android:id="@+id/edit_assessment_empty_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/no_notes"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_assessment_notes_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>